[gd_scene load_steps=12 format=2]

[ext_resource path="res://Resources/Sounds/glitch.ogg" type="AudioStream" id=1]
[ext_resource path="res://Scripts/HighScoreDisplay.gd" type="Script" id=2]
[ext_resource path="res://Resources/Theme.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/SceneTransition.gd" type="Script" id=4]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.0236686, 0.47929, 1 )
colors = PoolColorArray( 0.00817323, 0.00456238, 0.0507813, 1, 0.179688, 0.317261, 0.359375, 1, 0.804688, 0.804688, 0.804688, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 5 )

[sub_resource type="Environment" id=6]
background_mode = 4
background_color = Color( 0.270588, 0.113725, 0.113725, 1 )
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/4 = true
glow_intensity = 0.5
glow_strength = 0.82
glow_blend_mode = 0
glow_hdr_threshold = 0.28
glow_hdr_scale = 1.05
glow_bicubic_upscale = true
glow_high_quality = true
adjustment_enabled = true
adjustment_brightness = 1.01
adjustment_contrast = 1.2
adjustment_saturation = 1.5
adjustment_color_correction = SubResource( 7 )

[sub_resource type="Shader" id=8]
code = "/*
	Glitch Effect Shader by Yui Kinomoto @arlez80

	MIT License
*/

shader_type canvas_item;

// 振動の強さ
uniform float shake_power = 0.03;
// 振動率
uniform float shake_rate : hint_range( 0.0, 1.0 ) = 0.2;
// 振動速度
uniform float shake_speed = 5.0;
// 振動ブロックサイズ
uniform float shake_block_size = 30.5;
// 色の分離率
uniform float shake_color_rate : hint_range( 0.0, 1.0 ) = 0.01;

float random( float seed )
{
	return fract( 543.2543 * sin( dot( vec2( seed, seed ), vec2( 3525.46, -54.3415 ) ) ) );
}

void fragment( )
{
	float enable_shift = float(
		random( trunc( TIME * shake_speed ) )
	<	shake_rate
	);

	vec2 fixed_uv = SCREEN_UV;
	fixed_uv.x += (
		random(
			( trunc( SCREEN_UV.y * shake_block_size ) / shake_block_size )
		+	TIME
		) - 0.5
	) * shake_power * enable_shift;

	vec4 pixel_color = textureLod( SCREEN_TEXTURE, fixed_uv, 0.0 );
	pixel_color.r = mix(
		pixel_color.r
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( shake_color_rate, 0.0 ), 0.0 ).r
	,	enable_shift
	);
	pixel_color.b = mix(
		pixel_color.b
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( -shake_color_rate, 0.0 ), 0.0 ).b
	,	enable_shift
	);
	COLOR = pixel_color;
}
"

[sub_resource type="ShaderMaterial" id=9]
render_priority = 5
shader = SubResource( 8 )
shader_param/shake_power = 0.03
shader_param/shake_rate = 0.2
shader_param/shake_speed = 5.0
shader_param/shake_block_size = 30.5
shader_param/shake_color_rate = 0.01

[sub_resource type="Shader" id=16]
code = "/*
	グリッチ トランジション シェーダー by あるる（きのもと 結衣） @arlez80
	Glitch Transition Shader by Yui Kinomoto @arlez80

	MIT License
*/

shader_type canvas_item;

// 振動の強さ
uniform float shake_power = 0.03;
// 振動ブロックサイズ
uniform float shake_block_size = 30.5;
// 色の分離率
uniform float fade : hint_range( 0.0, 1.0 ) = 0.01;
// R方向
uniform vec2 direction_r = vec2( 1.0, 0.0 );
// G方向
uniform vec2 direction_g = vec2( 0.4, 1.0 );
// B方向
uniform vec2 direction_b = vec2( -0.7, -0.3 );

float random( float seed )
{
	return fract( 543.2543 * sin( dot( vec2( seed, seed ), vec2( 3525.46, -54.3415 ) ) ) );
}

void fragment( )
{
	vec2 fixed_uv = SCREEN_UV;
	fixed_uv.x += (
		random(
			( trunc( SCREEN_UV.y * shake_block_size ) / shake_block_size )
		+	TIME
		) - 0.5
	) * shake_power * ( fade * 12.0 );

	COLOR = vec4(
		textureLod( SCREEN_TEXTURE, fixed_uv + normalize( direction_r ) * fade, 0.0 ).r
	,	textureLod( SCREEN_TEXTURE, fixed_uv + normalize( direction_g ) * fade, 0.0 ).g
	,	textureLod( SCREEN_TEXTURE, fixed_uv + normalize( direction_b ) * fade, 0.0 ).b
	,	0.0
	) * ( 1.0 - fade );
	COLOR.a = 1.0;
}
"

[sub_resource type="ShaderMaterial" id=15]
shader = SubResource( 16 )
shader_param/shake_power = 0.5
shader_param/shake_block_size = 100.0
shader_param/fade = 0.0
shader_param/direction_r = Vector2( 1, 0 )
shader_param/direction_g = Vector2( 0.4, 1 )
shader_param/direction_b = Vector2( -0.7, -0.3 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1972, -238 )
theme = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -288.0
margin_top = 16.0
margin_right = 288.0
margin_bottom = 80.0
text = "LASER RUN"
align = 1
valign = 1

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -32.0
margin_right = 128.0
margin_bottom = 32.0
text = "Play"
flat = true

[node name="High" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -164.0
margin_bottom = -100.0
text = "High score:"
align = 1
valign = 1
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 6 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -300.0
margin_top = 100.0
margin_right = 300.0
margin_bottom = 170.0
theme = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "LASER [color=aqua]RUN[/color]"
text = "LASER RUN"

[node name="GlitchShader" type="ColorRect" parent="."]
material = SubResource( 9 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2

[node name="Transition" type="ColorRect" parent="."]
material = SubResource( 15 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
script = ExtResource( 4 )
scene_path = "res://Scenes/Map.tscn"

[node name="Tween" type="Tween" parent="Transition"]

[node name="GlitchSound" type="AudioStreamPlayer" parent="Transition"]
stream = ExtResource( 1 )
volume_db = -20.0

[connection signal="pressed" from="Play" to="Transition" method="_on_Play_pressed"]
[connection signal="tween_completed" from="Transition/Tween" to="Transition" method="_on_Tween_tween_completed"]
